04t5w000004ckajAAA/objects/Article_Feedback_Values__c.object
<CustomObject>
    <description>Object that stores article feedback configuration data.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Double_Value_Picklist__c</fullName>
        <description>Stores both positive and negative picklist values for Article Feedback configuration page</description>
        <inlineHelpText>Stores both positive and negative picklist values for Article Feedback configuration page</inlineHelpText>
        <label>Double Value Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Negative_Picklist__c</fullName>
        <description>Stores negative picklist values for Article Feedback configuration page</description>
        <inlineHelpText>Stores negative picklist values for Article Feedback configuration page</inlineHelpText>
        <label>Negative Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Enhancement suggestion</fullName>
                </value>
                <value>
                    <fullName>Information inaccurate</fullName>
                </value>
                <value>
                    <fullName>Link broken</fullName>
                </value>
                <value>
                    <fullName>Need to archive</fullName>
                </value>
                <value>
                    <fullName>Outdated (needs update)</fullName>
                </value>
                <value>
                    <fullName>Poorly written (not clear)</fullName>
                </value>
                <value>
                    <fullName>Positive feedback</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Negative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Negative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderNegative__c</fullName>
        <label>OrderNegative</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderPositive__c</fullName>
        <label>OrderPositive</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Positive_Picklist__c</fullName>
        <description>Stores positive picklist values for Article Feedback configuration page</description>
        <inlineHelpText>Stores positive picklist values for Article Feedback configuration page</inlineHelpText>
        <label>Positive Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Positive feedback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Positive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Positive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Article Feedback Values (Deprecated)</label>
    <language>en_US</language>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Article Feedback Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Article Feedback Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>